# clauralux

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  IMPROVEMENTS.md  Makefile  README.md  TODO.md  clauralux  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
plans/: README.md  plan-bot-diversity.md  plan-replay-system.md  plan-training-improvements.md
rust/: Cargo.toml
rust/src/: actions.rs  bots.rs  config.rs  game.rs  lib.rs  state.rs  training.rs  types.rs  view.rs
src/clauralux/: __init__.py  _engine.pyi  analysis.py  cli.py  core.py
src/clauralux/bots/: aggressive.py  baiter.py  base.py  coordinator.py  economic.py  evolved.py  expander.py  human.py  neural.py  noisy.py  opportunist.py  passive.py  random_bot.py  reactive.py  registry.py  rush.py  sniper.py  swarm.py  turtle.py
src/clauralux/engine/: actions.py  campaign.py  config.py  game.py  mapgen.py  maps.py  state.py  types.py  view.py
src/clauralux/renderer/: colors.py  commentary.py  menu.py  renderer.py
src/clauralux/replay/: recorder.py  replay_bot.py
src/clauralux/runner/: base.py  headless.py  tournament.py  visual.py
src/clauralux/training/: evolution.py  genome.py  trainer.py
tests/: test_core.py
tests/bots/: test_bot_action_parity.py  test_bots.py  test_evolved.py  test_new_bots.py  test_noisy.py  test_rust_bots.py
tests/engine/: test_campaign.py  test_game.py  test_mapgen.py  test_maps.py  test_multiplayer.py  test_types.py
tests/renderer/: conftest.py  test_commentary.py
tests/replay/: test_replay.py
tests/runner/: test_headless.py  test_tournament.py
tests/training/: test_evolution.py  test_fitness.py  test_genome.py  test_rust_parity.py  test_trainer.py
