[project]
name = "clauralux"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
visual = ["pygame-ce>=2.5"]

[project.scripts]
clauralux = "clauralux.cli:main"

[dependency-groups]
dev = [
  "maturin>=1.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "clauralux._engine"
features = ["pyo3/extension-module"]
manifest-path = "rust/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--cov=clauralux", "--cov-report=term-missing:skip-covered"]

[tool.coverage.run]
branch = true
source = ["clauralux"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
